[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/ui/unit/AP_Warrior.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/unit/Unit_Portrait.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/unit/Tab.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/ReactButtonMini.png" type="Texture" id=4]
[ext_resource path="res://resources/themes/custom/new_theme2.tres" type="Theme" id=5]
[ext_resource path="res://objects/UI/battle/UnitTabGUI.gd" type="Script" id=6]
[ext_resource path="res://assets/images/ui/unit/Deflect.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/unit/Block.png" type="Texture" id=9]
[ext_resource path="res://resources/fonts/GUI_Font.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/Fenix-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 2 )
Label/styles/normal = null

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/HP_Bar_Under.png-5e447dce3615d1a835a4f8eaa0d64100.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/HP_Bar.png-062d256201e6c2217fdd162c6ef8bdd0.stex"

[node name="UnitTabGUI" type="Control" groups=["units"]]
anchor_right = 0.2
anchor_bottom = 0.0694444
margin_bottom = -3.8147e-06
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tab" type="Sprite" parent="."]
modulate = Color( 1, 0.470588, 0.45098, 0.329412 )
position = Vector2( 1, 0 )
texture = ExtResource( 3 )
centered = false

[node name="Unit_Portrait" type="Sprite" parent="."]
position = Vector2( 24, 25 )
texture = ExtResource( 2 )

[node name="AP" type="Sprite" parent="."]
position = Vector2( 237, 25 )
texture = ExtResource( 1 )

[node name="AP_Label" type="Label" parent="AP"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 10 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitName" type="Label" parent="."]
margin_left = 49.0
margin_top = 2.0
margin_right = 187.0
margin_bottom = 21.0
rect_min_size = Vector2( 138, 0 )
rect_clip_content = true
theme = SubResource( 3 )
text = "Michelangelo"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="."]
margin_left = 49.0
margin_top = 28.0
margin_right = 185.0
margin_bottom = 48.0
value = 100.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HP_Label" type="Label" parent="HP"]
margin_right = 136.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100/120"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" type="TextureRect" parent="."]
margin_left = 188.0
margin_right = 212.0
margin_bottom = 24.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Block"]
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deflect" type="TextureRect" parent="."]
margin_left = 188.0
margin_top = 26.0
margin_right = 212.0
margin_bottom = 50.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Deflect"]
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReactButtonMini" type="TextureRect" parent="."]
visible = false
margin_left = 258.0
margin_top = 13.0
margin_right = 282.0
margin_bottom = 37.0
texture = ExtResource( 4 )
